# pRiscV

./: .gitignore  README.md
src/: alu.vhd  clk_div.vhd  control_unit.vhd  data_mem.vhd  data_mem_new.vhd  datapath.vhd  inst_mem.keep.vhd  inst_mem.vhd  inst_mem_led.vhd  inst_mem_new_led.vhd  inst_mem_uart.vhd  latchdeneme.vhd  my_riscv1.cst  my_riscv1.gao  my_riscv2.rao  my_riscv2.sdc  new.vhd  peripheral.vhd  register_file.vhd  register_file_latch.vhd  sign_extender.vhd
src/SW/: CMakeLists.txt  a.out  byteoutput.py  compile.bat  fpga.txt  fpgaByte.txt  led_blink.txt  linker.ld  new.s  riscv.cmake  uart_tx_test.elf  uart_tx_test.elf.list  uart_tx_test.map  uart_tx_test.s
src/SW/C code/: compile.bat  dis.txt  fpga.txt  fpgaByte.txt  linker.ld  main.c  main.elf  main.elf.list  main.map
src/SW/uartCode/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  final_output.py  fpgaByte.txt  main.bin.txt  main.c  main.disasm  main.elf  main.elf.list  main.map  main.s  test.elf  test.map
src/TB/: tb_alu.vhd  tb_control_unit.vhd  tb_data_mem.vhd  tb_datapath.vhd  tb_inst_mem.vhd  tb_register_file.vhd  tb_sign_extender.vhd
src/gowin_clkdiv/: gowin_clkdiv.mod  gowin_clkdiv.vhd  gowin_clkdiv_tmp.vhd
src/gowin_rpll/: gowin_rpll.ipc  gowin_rpll.mod  gowin_rpll.vhd  gowin_rpll_tmp.vhd
src/peripheral/: uart_top.vhd  uart_tx.vhd
